# AgileX_Autonomous_Driving_CU_Summer_2025

./: README.md  Summer_2025_Notes_Full.docx
Additional MISC Files/: README.md
Cloud Fuser Node/: Cloud Fuser Node_V3.txt  cloud_fuser_node_V1.py  cloud_fuser_node_V2.cpp  cloud_fuser_node_V4.cpp
Custom Launch Files/: Custom_Nav2_ALL_Map_Launch.py  Custom_Nav2_Launch.py  Custom_Slam_ALL_Launch.py  Custom_Slam_Launch.py  Custom_Slam_RS_Launch.py  README.md
Parameter Files/Nav2 Params/: README.md  nav2_params.yaml
Parameter Files/Slam Toolbox Params/: README.md  mapper_params_online_async.yaml
Parameter Files/Slam Toolbox Params/Full Documentation/: README.md  Summer_2025_Notes_Full.docx
scout_ws/: README.md
scout_ws/cloud_fuser/: CMakeLists.txt  package.xml  setup.cfg  setup.py
scout_ws/cloud_fuser/cloud_fuser/: cloud_fuser_node_V1.py  cloud_fuser_node_V2.cpp  cloud_fuser_node_V3.cpp  realsense_filter_node.py
scout_ws/cloud_fuser/launch/: cloud_fuser_launch.py  realsense_filter_launch.py
scout_ws/custom_launch/: package.xml  setup.py
scout_ws/custom_launch/launch/: Custom_Nav2_ALL_Launch.py  Custom_Nav2_Map_Launch.py  Custom_Nav2_RS_Launch.py  Custom_Slam_Launch.py  Custom_Slam_Offline_Launch.py
scout_ws/m-explore-ros2/explore/config/: explore.yaml
scout_ws/m-explore-ros2/explore/launch/: explore.launch.py
scout_ws/scout_ros2/scout_base/include/scout_base/: scout_base_ros.hpp  scout_messenger.hpp
scout_ws/scout_ros2/scout_base/launch/: scout_base.launch.py
scout_ws/scout_ros2/scout_base/src/: scout_base_ros.cpp
scout_ws/scout_ros2/scout_description/launch/: scout_base_description.launch.py
scout_ws/scout_ros2/scout_description/urdf/: scout_mini.urdf.xacro  scout_mini_wheel.xacro
